--- a/index.html
+++ b/index.html
@@ -3,21 +3,76 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel='stylesheet' href="./styles/normalize.css">
+  <link rel='stylesheet' href="./styles/style.css">
   <title>Научиться учиться</title>
 </head>
 <body>
   <div class="page">
     <header class="header">
-
+      <div class="header__logo header__position-left">
+        <img src='./images/logo_place_header.svg'>
+      </div>
+      <h1 class='header__title'>Научиться учиться</h1>
+      <h2 class='header__subtitle header__position-left'>Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a href="#" class='header__link'>Узнать &rarr;</a></h2>
+      <img src='./images/header-image.png' alt="" class='header__main-illustration'>
+      <div class='header__square-pic'></div>
     </header>
     <main class="content">
-      <section class="description">
+      <section class="two-columns__description block__padding-top-100">
+        <div class='two-columns__brief'>
+          Главные проблемы в обучении
+        </div>
+        <div class='two-columns__main-text'>
+          <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
+          <p class="two-columns__paragraph"><span class='two-columns__span-accent'>Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
+          <p class='two-columns__paragraph'>Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
+        </div>
       </section>
 
-      <section class="digits">
+      <section class="digits block__padding-top-100">
+        <div class='section-position_center'>
+          <h2 class='section-title'>Цифры и факты</h1>
+          <h3 class='section-subtitle'>Про учёбу и мозг</h3>
+        </div>
+        <div class='table'>
+          <div class='table__cell'>
+            <p class='table__heading'>86 миллиардов</p>
+            <p class="table__text">Число нейронов в мозге человека</p>
+          </div>
+          <div class='table__cell'>
+            <p class='table__heading'>2.1 миллиарда</p>
+            <p class="table__text">Число нуждающихся в повышении квалификации</p>
+            <p class="table__text">Всемирный Банк, 2017</p>
+          </div>
+          <div class='table__cell'>
+            <p class='table__heading'>1000 терабайт</p>
+            <p class="table__text">Объём памяти человека</p>
+          </div>
+          <div class='table__cell'>
+            <p class='table__heading'>500 триллионов</p>
+            <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
+          </div>
+          <div class='table__cell'>
+            <p class='table__heading'>420 миллионов</p>
+            <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+            <p class="table__text">Всемирный Банк, 2017</p>
+          </div>
+          <div class='table__cell'>
+            <p class='table__heading'>17–20 лет</p>
+            <p class="table__text">Пик обучаемости</p>
+          </div>
+          <div class='table__cell'>
+            <p class='table__heading'>1885 год</p>
+            <p class="table__text">Открытие кривой забывания</p>
+          </div>
+          <div class='table__cell'>
+            <p class='table__heading'>1889 год</p>
+            <p class="table__text">Открытие условного рефлекса</p>
+          </div>
       </section>
 
-      <section class="feinman">
+      <section class="feinman block__padding-top-100">
       </section>
 
       <section class="kaufman">
