--- a/index.html
+++ b/index.html
@@ -72,10 +72,53 @@
           </div>
       </section>
 
-      <section class="feinman block__padding-top-100">
+      <section class="feynman">
+        <div class="section-position_center">
+          <h2 class="feynman__title">Метод Фейнмана</h2>
+          <h3 class='feynman__subtitle'>Выучить и не забыть.</h3>
+          <a class='feynman__link' href="#">Подробнее &rarr;</a>
+        </div>
       </section>
 
       <section class="kaufman">
+        <div class='section-position_center'>
+          <h2 class='section-title'>Принципы обучения</h1>
+          <h3 class='section-subtitle'>от Джоша Кауфмана</h3>
+        </div>
+        <div class='table'>
+          <div class='table__cell'>
+            <p class='table__heading'>1</p>
+            <p class="table__text">Выберите привлекательный проект.</p>
+          </div>
+          <div class='table__cell'>
+            <p class='table__heading'>2</p>
+            <p class="table__text">Сосредоточьтесь на каком-то одном навыке.</p>
+          </div>
+          <div class='table__cell'>
+            <p class='table__heading'>3</p>
+            <p class="table__text">Определите целевой уровень мастерства.</p>
+          </div>
+          <div class='table__cell'>
+            <p class='table__heading'>500 триллионов</p>
+            <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
+          </div>
+          <div class='table__cell'>
+            <p class='table__heading'>420 миллионов</p>
+            <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+            <p class="table__text">Всемирный Банк, 2017</p>
+          </div>
+          <div class='table__cell'>
+            <p class='table__heading'>17–20 лет</p>
+            <p class="table__text">Пик обучаемости</p>
+          </div>
+          <div class='table__cell'>
+            <p class='table__heading'>1885 год</p>
+            <p class="table__text">Открытие кривой забывания</p>
+          </div>
+          <div class='table__cell'>
+            <p class='table__heading'>1889 год</p>
+            <p class="table__text">Открытие условного рефлекса</p>
+          </div>
       </section>
     </main>
     <footer class="footer">
