--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="page">
     <header class="header">
       <div class="header__logo header__position-left">
-        <img src='./images/logo_place_header.svg'>
+        <img src='./images/logo_place_header.svg' alt=''>
       </div>
       <h1 class='header__title'>Научиться учиться</h1>
       <h2 class='header__subtitle header__position-left'>Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a href="#" class='header__link'>Узнать &rarr;</a></h2>
@@ -20,9 +20,9 @@
     </header>
     <main class="content">
       <section class="two-columns__description block__padding-top-100">
-        <div class='two-columns__brief'>
+        <h6 class='two-columns__brief'>
           Главные проблемы в обучении
-        </div>
+        </h6>
         <div class='two-columns__main-text'>
           <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
           <p class="two-columns__paragraph"><span class='two-columns__span-accent'>Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
@@ -32,7 +32,7 @@
 
       <section class="digits block__padding-top-100">
         <div class='section-position_center'>
-          <h2 class='section-title'>Цифры и факты</h1>
+          <h2 class='section-title'>Цифры и факты</h2>
           <h3 class='section-subtitle'>Про учёбу и мозг</h3>
         </div>
         <div class='table'>
@@ -70,60 +70,92 @@
             <p class='table__heading'>1889 год</p>
             <p class="table__text">Открытие условного рефлекса</p>
           </div>
+        </div>
       </section>
 
       <section class="feynman">
         <div class="section-position_center">
           <h2 class="feynman__title">Метод Фейнмана</h2>
-          <h3 class='feynman__subtitle'>Выучить и не забыть.</h3>
-          <a class='feynman__link' href="#">Подробнее &rarr;</a>
+          <p class='feynman__subtitle'>Выучить и не забыть.</p>
         </div>
+        <a class='feynman__link' href="#">Подробнее &rarr;</a>
       </section>
 
       <section class="kaufman">
+        <img class='kaufman__triangle' src='./images/kaufman-triangle.svg' alt="">
         <div class='section-position_center'>
-          <h2 class='section-title'>Принципы обучения</h1>
-          <h3 class='section-subtitle'>от Джоша Кауфмана</h3>
+          <h2 class='section-title section-title_theme_dark'>Принципы обучения</h2>
+          <h3 class='section-subtitle section-subtitle_theme_dark'>от Джоша Кауфмана</h3>
         </div>
         <div class='table'>
-          <div class='table__cell'>
-            <p class='table__heading'>1</p>
-            <p class="table__text">Выберите привлекательный проект.</p>
+          <div class='table__cell table__cell_theme_dark'>
+            <p class='table__heading table__heading_theme_dark'>1</p>
+            <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
           </div>
-          <div class='table__cell'>
-            <p class='table__heading'>2</p>
-            <p class="table__text">Сосредоточьтесь на каком-то одном навыке.</p>
+          <div class='table__cell table__cell_theme_dark'>
+            <p class='table__heading table__heading_theme_dark'>2</p>
+            <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
           </div>
-          <div class='table__cell'>
-            <p class='table__heading'>3</p>
-            <p class="table__text">Определите целевой уровень мастерства.</p>
+          <div class='table__cell table__cell_theme_dark'>
+            <p class='table__heading table__heading_theme_dark'>3</p>
+            <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
           </div>
-          <div class='table__cell'>
-            <p class='table__heading'>500 триллионов</p>
-            <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
+          <div class='table__cell table__cell_theme_dark'>
+            <p class='table__heading table__heading_theme_dark'>4</p>
+            <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
           </div>
-          <div class='table__cell'>
-            <p class='table__heading'>420 миллионов</p>
-            <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
-            <p class="table__text">Всемирный Банк, 2017</p>
+          <div class='table__cell table__cell_theme_dark'>
+            <p class='table__heading table__heading_theme_dark'>5</p>
+            <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
           </div>
-          <div class='table__cell'>
-            <p class='table__heading'>17–20 лет</p>
-            <p class="table__text">Пик обучаемости</p>
+          <div class='table__cell table__cell_theme_dark'>
+            <p class='table__heading table__heading_theme_dark'>6</p>
+            <p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p>
           </div>
-          <div class='table__cell'>
-            <p class='table__heading'>1885 год</p>
-            <p class="table__text">Открытие кривой забывания</p>
+          <div class='table__cell table__cell_theme_dark'>
+            <p class='table__heading table__heading_theme_dark'>7</p>
+            <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
           </div>
-          <div class='table__cell'>
-            <p class='table__heading'>1889 год</p>
-            <p class="table__text">Открытие условного рефлекса</p>
+          <div class='table__cell table__cell_theme_dark'>
+            <p class='table__heading table__heading_theme_dark'>8</p>
+            <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
           </div>
+          <div class='table__cell table__cell_theme_dark'>
+            <p class='table__heading table__heading_theme_dark'>9</p>
+            <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+          </div>
+          <div class='table__cell table__cell_theme_dark'>
+            <p class='table__heading table__heading_theme_dark'>10</p>
+            <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
+          </div>
+        </div>
       </section>
     </main>
     <footer class="footer">
-
+      <nav class="footer__columns">
+        <div class="footer__columns-copyright">
+          <div class="logo__place-footer">
+            <img src='./images/logo_place_footer.svg' alt=''>
+            <div class="footer__author"> &copy 2020.Чупина Юлия</div>
+          </div>
+        </div>
+        <div class="footer__columns-info">
+          <div class='footer__column-heading'>О Практикуме</div>
+          <div><a class='footer__column-links' href='#'>Главная</a></div>
+          <div><a class='footer__column-links' href='#'>Концепция</a></div>
+          <div><a class='footer__column-links' href='#'>Наставники</a></div>
+        </div>
+        <div class="footer__columns-social">
+          <div class='footer__column-heading'>Соцсети</div>
+          <ul>
+            <li><a class='footer__column-links' href='#'><img class="footer__social-icon" alt='' src="./images/facebook_color_white.svg"> Facebook</a></li>
+            <li><a class='footer__column-links' href='#'><img class="footer__social-icon" alt='' src="./images/vk_color_white.svg"> Вконтакте</a></li>
+            <li><a class='footer__column-links' href='#'><img class="footer__social-icon" alt='' src="./images/instagram_color_white.svg"> Instagram</a></li>
+          </ul>
+      </div>
+      </nav>
     </footer>
   </div>
 </body>
 </html>
+
