--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
       </section>
 
       <section class="kaufman">
-        <img class='kaufman__triangle' src='./images/kaufman-triangle.svg' alt="">
-        <div class='section-position_center'>
+        <div class='kaufman__triangle'><img src='./images/kaufman-triangle.svg' alt=""></div>
+        <div class='section-position_center section-position_z-index'>
           <h2 class='section-title section-title_theme_dark'>Принципы обучения</h2>
           <h3 class='section-subtitle section-subtitle_theme_dark'>от Джоша Кауфмана</h3>
         </div>
