--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <div class="footer__columns-copyright">
           <div class="logo__place-footer">
             <img src='./images/logo_place_footer.svg' alt=''>
-            <div class="footer__author"> &copy 2020.Чупина Юлия</div>
+            <div class="footer__author"> &copy;2020.Чупина Юлия</div>
           </div>
         </div>
         <div class="footer__columns-info">
