--- a/index.html
+++ b/index.html
@@ -19,14 +19,16 @@
       <div class='header__square-pic'></div>
     </header>
     <main class="content">
-      <section class="two-columns__description block__padding-top-100">
-        <h6 class='two-columns__brief'>
-          Главные проблемы в обучении
-        </h6>
-        <div class='two-columns__main-text'>
-          <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
-          <p class="two-columns__paragraph"><span class='two-columns__span-accent'>Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
-          <p class='two-columns__paragraph'>Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
+      <section class="description block__padding-top-100">
+        <div class="two-columns__description">
+          <h6 class='two-columns__brief'>
+            Главные проблемы в обучении
+          </h6>
+          <div class='two-columns__main-text'>
+            <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
+            <p class="two-columns__paragraph"><span class='two-columns__span-accent'>Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
+            <p class='two-columns__paragraph'>Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
+          </div>
         </div>
       </section>
 
@@ -82,7 +84,8 @@
       </section>
 
       <section class="kaufman">
-        <div class='kaufman__triangle'><img src='./images/kaufman-triangle.svg' alt=""></div>
+        <div class='kaufman__triangle'><img src='./images/kaufman-triangle.svg' alt="">
+        </div>
         <div class='section-position_center section-position_z-index'>
           <h2 class='section-title section-title_theme_dark'>Принципы обучения</h2>
           <h3 class='section-subtitle section-subtitle_theme_dark'>от Джоша Кауфмана</h3>
@@ -147,11 +150,9 @@
         </div>
         <div class="footer__columns-social">
           <div class='footer__column-heading'>Соцсети</div>
-          <ul>
-            <li><a class='footer__column-links' href='#'><img class="footer__social-icon" alt='' src="./images/facebook_color_white.svg"> Facebook</a></li>
-            <li><a class='footer__column-links' href='#'><img class="footer__social-icon" alt='' src="./images/vk_color_white.svg"> Вконтакте</a></li>
-            <li><a class='footer__column-links' href='#'><img class="footer__social-icon" alt='' src="./images/instagram_color_white.svg"> Instagram</a></li>
-          </ul>
+            <div><a class='footer__column-links' href='#'><img class="footer__social-icon" alt='' src="./images/facebook_color_white.svg"> Facebook</a></div>
+            <div><a class='footer__column-links' href='#'><img class="footer__social-icon" alt='' src="./images/vk_color_white.svg"> Вконтакте</a></div>
+            <div><a class='footer__column-links' href='#'><img class="footer__social-icon" alt='' src="./images/instagram_color_white.svg"> Instagram</a></div>
       </div>
       </nav>
     </footer>
