--- a/index.html
+++ b/index.html
@@ -10,20 +10,18 @@
 <body>
   <div class="page">
     <header class="header">
-      <div class="header__logo header__position-left">
-        <img src='./images/logo_place_header.svg' alt=''>
-      </div>
+      <img class="logo__place_header" src='./images/logo_place_header.svg' alt=''>
       <h1 class='header__title'>Научиться учиться</h1>
-      <h2 class='header__subtitle header__position-left'>Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a href="#" class='header__link'>Узнать &rarr;</a></h2>
+      <p class='header__subtitle'>Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a href="#" class='header__link'>Узнать &rarr;</a></p>
       <img src='./images/header-image.png' alt="" class='header__main-illustration'>
       <div class='header__square-pic'></div>
     </header>
     <main class="content">
-      <section class="description block__padding-top-100">
+      <section class="description">
         <div class="two-columns__description">
-          <h6 class='two-columns__brief'>
+          <h2 class='two-columns__brief'>
             Главные проблемы в обучении
-          </h6>
+          </h2>
           <div class='two-columns__main-text'>
             <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
             <p class="two-columns__paragraph"><span class='two-columns__span-accent'>Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
@@ -32,129 +30,124 @@
         </div>
       </section>
 
-      <section class="digits block__padding-top-100">
-        <div class='section-position_center'>
-          <h2 class='section-title'>Цифры и факты</h2>
-          <h3 class='section-subtitle'>Про учёбу и мозг</h3>
-        </div>
+      <section class="digits">
+        <h2 class='section-title'>Цифры и факты</h2>
+        <h3 class='section-subtitle'>Про учёбу и мозг</h3>
         <div class='table'>
           <div class='table__cell'>
-            <p class='table__heading'>86 миллиардов</p>
+            <h3 class='table__heading'>86 миллиардов</h3>
             <p class="table__text">Число нейронов в мозге человека</p>
           </div>
           <div class='table__cell'>
-            <p class='table__heading'>2.1 миллиарда</p>
+            <h3 class='table__heading'>2.1 миллиарда</h3>
             <p class="table__text">Число нуждающихся в повышении квалификации</p>
             <p class="table__text">Всемирный Банк, 2017</p>
           </div>
           <div class='table__cell'>
-            <p class='table__heading'>1000 терабайт</p>
+            <h3 class='table__heading'>1000 терабайт</h3>
             <p class="table__text">Объём памяти человека</p>
           </div>
           <div class='table__cell'>
-            <p class='table__heading'>500 триллионов</p>
+            <h3 class='table__heading'>500 триллионов</h3>
             <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
           </div>
           <div class='table__cell'>
-            <p class='table__heading'>420 миллионов</p>
+            <h3 class='table__heading'>420 миллионов</h3>
             <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
             <p class="table__text">Всемирный Банк, 2017</p>
           </div>
           <div class='table__cell'>
-            <p class='table__heading'>17–20 лет</p>
+            <h3 class='table__heading'>17–20 лет</h3>
             <p class="table__text">Пик обучаемости</p>
           </div>
           <div class='table__cell'>
-            <p class='table__heading'>1885 год</p>
+            <h3 class='table__heading'>1885 год</h3>
             <p class="table__text">Открытие кривой забывания</p>
           </div>
           <div class='table__cell'>
-            <p class='table__heading'>1889 год</p>
+            <h3 class='table__heading'>1889 год</h3>
             <p class="table__text">Открытие условного рефлекса</p>
           </div>
         </div>
       </section>
 
       <section class="feynman">
-        <div class="section-position_center">
-          <h2 class="feynman__title">Метод Фейнмана</h2>
-          <p class='feynman__subtitle'>Выучить и не забыть.</p>
-        </div>
+        <h2 class="feynman__title section-position_center">Метод Фейнмана</h2>
+        <p class='feynman__subtitle section-position_center'>Выучить и не забыть.</p>
         <a class='feynman__link' href="#">Подробнее &rarr;</a>
       </section>
 
       <section class="kaufman">
-        <div class='kaufman__triangle'><img src='./images/kaufman-triangle.svg' alt="">
-        </div>
-        <div class='section-position_center section-position_z-index'>
-          <h2 class='section-title section-title_theme_dark'>Принципы обучения</h2>
-          <h3 class='section-subtitle section-subtitle_theme_dark'>от Джоша Кауфмана</h3>
-        </div>
+        <div class='kaufman__triangle'></div>
+        <h2 class='section-title section-title_theme_dark section-position_center section-position_z-index'>Принципы обучения</h2>
+        <p class='section-subtitle section-subtitle_theme_dark section-position_center section-position_z-index'>от Джоша Кауфмана</p>
         <div class='table'>
           <div class='table__cell table__cell_theme_dark'>
-            <p class='table__heading table__heading_theme_dark'>1</p>
+            <h3 class='table__heading table__heading_theme_dark'>1</h3>
             <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
           </div>
           <div class='table__cell table__cell_theme_dark'>
-            <p class='table__heading table__heading_theme_dark'>2</p>
+            <h3 class='table__heading table__heading_theme_dark'>2</h3>
             <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
           </div>
           <div class='table__cell table__cell_theme_dark'>
-            <p class='table__heading table__heading_theme_dark'>3</p>
+            <h3 class='table__heading table__heading_theme_dark'>3</h3>
             <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
           </div>
           <div class='table__cell table__cell_theme_dark'>
-            <p class='table__heading table__heading_theme_dark'>4</p>
+            <h3 class='table__heading table__heading_theme_dark'>4</h3>
             <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
           </div>
           <div class='table__cell table__cell_theme_dark'>
-            <p class='table__heading table__heading_theme_dark'>5</p>
+            <h3 class='table__heading table__heading_theme_dark'>5</h3>
             <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
           </div>
           <div class='table__cell table__cell_theme_dark'>
-            <p class='table__heading table__heading_theme_dark'>6</p>
+            <h3 class='table__heading table__heading_theme_dark'>6</h3>
             <p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p>
           </div>
           <div class='table__cell table__cell_theme_dark'>
-            <p class='table__heading table__heading_theme_dark'>7</p>
+            <h3 class='table__heading table__heading_theme_dark'>7</h3>
             <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
           </div>
           <div class='table__cell table__cell_theme_dark'>
-            <p class='table__heading table__heading_theme_dark'>8</p>
+            <h3 class='table__heading table__heading_theme_dark'>8</h3>
             <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
           </div>
           <div class='table__cell table__cell_theme_dark'>
-            <p class='table__heading table__heading_theme_dark'>9</p>
+            <h3 class='table__heading table__heading_theme_dark'>9</h3>
             <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
           </div>
           <div class='table__cell table__cell_theme_dark'>
-            <p class='table__heading table__heading_theme_dark'>10</p>
+            <h3 class='table__heading table__heading_theme_dark'>10</h3>
             <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </div>
         </div>
       </section>
     </main>
     <footer class="footer">
-      <nav class="footer__columns">
-        <div class="footer__columns-copyright">
-          <div class="logo__place-footer">
-            <img src='./images/logo_place_footer.svg' alt=''>
-            <div class="footer__author"> &copy;2020.Чупина Юлия</div>
-          </div>
+      <div class="footer__columns">
+        <div class="footer__content_column-copyright">
+          <img class="logo__place_footer" src='./images/logo_place_footer.svg' alt=''>
+          <p class="footer__author"> &copy;2020.Чупина Юлия</p>
         </div>
-        <div class="footer__columns-info">
-          <div class='footer__column-heading'>О Практикуме</div>
-          <div><a class='footer__column-links' href='#'>Главная</a></div>
-          <div><a class='footer__column-links' href='#'>Концепция</a></div>
-          <div><a class='footer__column-links' href='#'>Наставники</a></div>
+        <nav class="footer__columns_content-info">
+          <h3 class='footer__column-heading'>О Практикуме</h3>
+          <ul class='footer__column-links'>
+            <li><a class='footer__column-link' href='#'>Главная</a></li>
+            <li><a class='footer__column-link' href='#'>Концепция</a></li>
+            <li><a class='footer__column-link' href='#'>Наставники</a></li>
+         </ul>
+        </nav>
+        <div class="footer__column_content-social">
+          <h3 class='footer__column-heading'>Соцсети</h3>
+          <ul class='footer__column-links'>
+            <li><a class='footer__column-link' href='#'><img class="footer__social-icon" alt='' src="./images/facebook_color_white.svg"> Facebook</a></li>
+            <li><a class='footer__column-link' href='#'><img class="footer__social-icon" alt='' src="./images/vk_color_white.svg"> Вконтакте</a></li>
+            <li><a class='footer__column-link' href='#'><img class="footer__social-icon" alt='' src="./images/instagram_color_white.svg"> Instagram</a></li>
+          </ul>
         </div>
-        <div class="footer__columns-social">
-          <div class='footer__column-heading'>Соцсети</div>
-            <div><a class='footer__column-links' href='#'><img class="footer__social-icon" alt='' src="./images/facebook_color_white.svg"> Facebook</a></div>
-            <div><a class='footer__column-links' href='#'><img class="footer__social-icon" alt='' src="./images/vk_color_white.svg"> Вконтакте</a></div>
-            <div><a class='footer__column-links' href='#'><img class="footer__social-icon" alt='' src="./images/instagram_color_white.svg"> Instagram</a></div>
       </div>
-      </nav>
     </footer>
   </div>
 </body>
