--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 <body>
   <div class="page">
     <header class="header">
-      <img class="logo__place_header" src='./images/logo_place_header.svg' alt=''>
+      <img class="logo logo_place_header" src='./images/logo_place_header.svg' alt='Лого'>
       <h1 class='header__title'>Научиться учиться</h1>
       <p class='header__subtitle'>Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a href="#" class='header__link'>Узнать &rarr;</a></p>
-      <img src='./images/header-image.png' alt="" class='header__main-illustration'>
+      <img src='./images/header-image.png' alt="Главное изображение" class='header__main-illustration'>
       <div class='header__square-pic'></div>
     </header>
     <main class="content">
       <section class="description">
-        <div class="two-columns__description">
+        <div class="two-columns">
           <h2 class='two-columns__brief'>
             Главные проблемы в обучении
           </h2>
@@ -32,7 +32,7 @@
 
       <section class="digits">
         <h2 class='section-title'>Цифры и факты</h2>
-        <h3 class='section-subtitle'>Про учёбу и мозг</h3>
+        <p class='section-subtitle'>Про учёбу и мозг</p>
         <div class='table'>
           <div class='table__cell'>
             <h3 class='table__heading'>86 миллиардов</h3>
@@ -72,15 +72,15 @@
       </section>
 
       <section class="feynman">
-        <h2 class="feynman__title section-position_center">Метод Фейнмана</h2>
-        <p class='feynman__subtitle section-position_center'>Выучить и не забыть.</p>
+        <h2 class="feynman__title">Метод Фейнмана</h2>
+        <p class='feynman__subtitle'>Выучить и не забыть.</p>
         <a class='feynman__link' href="#">Подробнее &rarr;</a>
       </section>
 
       <section class="kaufman">
         <div class='kaufman__triangle'></div>
-        <h2 class='section-title section-title_theme_dark section-position_center section-position_z-index'>Принципы обучения</h2>
-        <p class='section-subtitle section-subtitle_theme_dark section-position_center section-position_z-index'>от Джоша Кауфмана</p>
+        <h2 class='section-title section-title_theme_dark section-position_z-index'>Принципы обучения</h2>
+        <p class='section-subtitle section-subtitle_theme_dark section-position_z-index'>от Джоша Кауфмана</p>
         <div class='table'>
           <div class='table__cell table__cell_theme_dark'>
             <h3 class='table__heading table__heading_theme_dark'>1</h3>
@@ -128,7 +128,7 @@
     <footer class="footer">
       <div class="footer__columns">
         <div class="footer__content_column-copyright">
-          <img class="logo__place_footer" src='./images/logo_place_footer.svg' alt=''>
+          <img class="logo logo_place_footer" src='./images/logo_place_footer.svg' alt='Лого'>
           <p class="footer__author"> &copy;2020.Чупина Юлия</p>
         </div>
         <nav class="footer__columns_content-info">
@@ -142,9 +142,9 @@
         <div class="footer__column_content-social">
           <h3 class='footer__column-heading'>Соцсети</h3>
           <ul class='footer__column-links'>
-            <li><a class='footer__column-link' href='#'><img class="footer__social-icon" alt='' src="./images/facebook_color_white.svg"> Facebook</a></li>
-            <li><a class='footer__column-link' href='#'><img class="footer__social-icon" alt='' src="./images/vk_color_white.svg"> Вконтакте</a></li>
-            <li><a class='footer__column-link' href='#'><img class="footer__social-icon" alt='' src="./images/instagram_color_white.svg"> Instagram</a></li>
+            <li><a class='footer__column-link' href='#'><img class="footer__social-icon" alt='Социальная сеть Facebook' src="./images/facebook_color_white.svg">Facebook</a></li>
+            <li><a class='footer__column-link' href='#'><img class="footer__social-icon" alt='Социальная сеть Вконтакте' src="./images/vk_color_white.svg">Вконтакте</a></li>
+            <li><a class='footer__column-link' href='#'><img class="footer__social-icon" alt='Социальная сеть Instagram' src="./images/instagram_color_white.svg">Instagram</a></li>
           </ul>
         </div>
       </div>
