--- a/index.html
+++ b/index.html
@@ -127,11 +127,11 @@
     </main>
     <footer class="footer">
       <div class="footer__columns">
-        <div class="footer__content_column-copyright">
+        <div class="footer__column footer__column_content_copyright">
           <img class="logo logo_place_footer" src='./images/logo_place_footer.svg' alt='Лого'>
           <p class="footer__author"> &copy;2020.Чупина Юлия</p>
         </div>
-        <nav class="footer__columns_content-info">
+        <nav class="footer__column footer__column_content_info">
           <h3 class='footer__column-heading'>О Практикуме</h3>
           <ul class='footer__column-links'>
             <li><a class='footer__column-link' href='#'>Главная</a></li>
@@ -139,7 +139,7 @@
             <li><a class='footer__column-link' href='#'>Наставники</a></li>
          </ul>
         </nav>
-        <div class="footer__column_content-social">
+        <div class="footer__column footer__column_content_social">
           <h3 class='footer__column-heading'>Соцсети</h3>
           <ul class='footer__column-links'>
             <li><a class='footer__column-link' href='#'><img class="footer__social-icon" alt='Социальная сеть Facebook' src="./images/facebook_color_white.svg">Facebook</a></li>
