--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
 
       <section class="kaufman">
         <div class='kaufman__triangle'></div>
-        <h2 class='section-title section-title_theme_dark section-position_z-index'>Принципы обучения</h2>
-        <p class='section-subtitle section-subtitle_theme_dark section-position_z-index'>от Джоша Кауфмана</p>
+        <h2 class='section-title section-title_theme_dark'>Принципы обучения</h2>
+        <p class='section-subtitle section-subtitle_theme_dark'>от Джоша Кауфмана</p>
         <div class='table'>
           <div class='table__cell table__cell_theme_dark'>
             <h3 class='table__heading table__heading_theme_dark'>1</h3>
