--- a/index.html
+++ b/index.html
@@ -30,6 +30,38 @@
         </div>
       </section>
 
+      <section class="techniques">
+        <h2 class='section-title'>Техники обучения</h2>
+        <p class='section-subtitle'>Пять практик от Барбары Оакли</p>
+        <div class='card'>
+          <div class='card__item'>
+          <img class='card__image' alt='Два вида внимания' src="">
+          <h3 class='card__title'>Два вида внимания</h3>
+          <p class='card__description'>Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
+          </div>
+          <div class='card__item'>
+            <img class='card__image' alt='Вспомнить' src="">
+            <h3 class='card__title'>Recall</h3>
+            <p class='card__description'>Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
+            </div>
+          <div class='card__item'>
+            <img class='card__image' alt='Интерливинг' src="">
+            <h3 class='card__title'>Интерливинг</h3>
+            <p class='card__description'>Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
+          </div>
+          <div class='card__item'>
+            <img class='card__image' alt='Вопросы' src="">
+            <h3 class='card__title'>Вопросы</h3>
+            <p class='card__description'>Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
+          </div>
+          <div class='card__item'>
+            <img class='card__image' alt='Иллюзия компетентности' src="">
+            <h3 class='card__title'>Иллюзия компетентности</h3>
+            <p class='card__description'>Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
+          </div>
+        </div>
+      </section>
+
       <section class="digits">
         <h2 class='section-title'>Цифры и факты</h2>
         <p class='section-subtitle'>Про учёбу и мозг</p>
