--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel='stylesheet' href="./vendor/normalize.css">
-  <link rel='stylesheet' href="./pages/index.css">
+  <link rel='stylesheet' href="./blocks/index.css">
   <title>Научиться учиться</title>
 </head>
 <body>
@@ -62,6 +62,30 @@
         </div>
       </section>
 
+      <section class='video'>
+        <h2 class='section-title'>Видео нa TED</h2>
+        <p class='section-subtitle'>Для тех, кто любит прокрастинировать</p>
+        <div class='video'>
+          <iframe class='video__iframe' width="560" height="315" src="https://www.youtube.com/embed/arj7oStGLkU" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/5MgBikgcWnY" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+      </section>
+
+      <section class='oakley'>
+        <div class="two-columns">
+          <h2 class='two-columns__brief'>История Барбары Оакли.</h2>
+          <div class='two-columns__main-text'>
+            <p class="two-columns__paragraph">С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием, причём далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку, да так успешно, что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику. И тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся», ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.</p>
+          </div>
+        </div>
+      </section>
+
+      <section class="feynman">
+        <h2 class="feynman__title">Метод Фейнмана</h2>
+        <p class='feynman__subtitle'>Выучить и не забыть.</p>
+        <a class='feynman__link' href="#">Подробнее &rarr;</a>
+      </section>
+
       <section class="digits">
         <h2 class='section-title'>Цифры и факты</h2>
         <p class='section-subtitle'>Про учёбу и мозг</p>
@@ -103,10 +127,18 @@
         </div>
       </section>
 
-      <section class="feynman">
-        <h2 class="feynman__title">Метод Фейнмана</h2>
-        <p class='feynman__subtitle'>Выучить и не забыть.</p>
-        <a class='feynman__link' href="#">Подробнее &rarr;</a>
+      <section class='khan'>
+        <div class='khan__container'>
+          <p class='khan__author'>Салман Хан</p>
+          <h3 class='khan__title'>Весь мир — школа</h3>
+          <p class='khan__quote'>Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
+          <p class='khan__quote-author'>Джордж Лукас</p>
+          <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
+          <div class='khan__book-container'>
+            <img class='khan__book-container' alt='Книга' scr=''>
+            <p class='khan__buy-link'></p>
+          </div>
+        </div>
       </section>
 
       <section class="kaufman">
@@ -156,6 +188,18 @@
           </div>
         </div>
       </section>
+
+      <section class='resources'>
+        <h2 class='section-title'>Полезные ресурсы</h2>
+        <p class='section-subtitle'>Больше материалов о техниках и лайфхаках обучения</p>
+        <div class='resources__logo-zone'>
+          <img class='resources__logo' alt='Полезные материалы' scr=''>
+          <img class='resources__logo' alt='Полезные материалы' scr=''>
+          <img class='resources__logo' alt='Полезные материалы' scr=''>
+          <img class='resources__logo' alt='Полезные материалы' scr=''>
+        </div>
+      </section>
+
     </main>
     <footer class="footer">
       <div class="footer__columns">
