--- a/index.html
+++ b/index.html
@@ -35,27 +35,27 @@
         <p class='section-subtitle'>Пять практик от Барбары Оакли</p>
         <div class='card'>
           <div class='card__item'>
-          <img class='card__image' alt='Два вида внимания' src="">
+          <img class='card__image' alt='Два вида внимания' src="./images/cards-attention.png">
           <h3 class='card__title'>Два вида внимания</h3>
           <p class='card__description'>Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
           </div>
           <div class='card__item'>
-            <img class='card__image' alt='Вспомнить' src="">
+            <img class='card__image' alt='Вспомнить' src="./images/cards-recall.png">
             <h3 class='card__title'>Recall</h3>
             <p class='card__description'>Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
             </div>
           <div class='card__item'>
-            <img class='card__image' alt='Интерливинг' src="">
+            <img class='card__image' alt='Интерливинг' src="./images/cards-interliving.png">
             <h3 class='card__title'>Интерливинг</h3>
             <p class='card__description'>Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
           </div>
           <div class='card__item'>
-            <img class='card__image' alt='Вопросы' src="">
+            <img class='card__image' alt='Вопросы' src="./images/cards-question.png">
             <h3 class='card__title'>Вопросы</h3>
             <p class='card__description'>Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
           </div>
           <div class='card__item'>
-            <img class='card__image' alt='Иллюзия компетентности' src="">
+            <img class='card__image' alt='Иллюзия компетентности' src="./images/cards-competence.png">
             <h3 class='card__title'>Иллюзия компетентности</h3>
             <p class='card__description'>Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
           </div>
@@ -65,9 +65,9 @@
       <section class='video'>
         <h2 class='section-title'>Видео нa TED</h2>
         <p class='section-subtitle'>Для тех, кто любит прокрастинировать</p>
-        <div class='video'>
-          <iframe class='video__iframe' width="560" height="315" src="https://www.youtube.com/embed/arj7oStGLkU" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/5MgBikgcWnY" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <div class='video__iframes'>
+          <iframe class='video__iframe' src="https://www.youtube.com/embed/arj7oStGLkU" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe class='video__iframe' src="https://www.youtube.com/embed/5MgBikgcWnY" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
       </section>
 
@@ -135,7 +135,7 @@
           <p class='khan__quote-author'>Джордж Лукас</p>
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class='khan__book-container'>
-            <img class='khan__book-container' alt='Книга' scr=''>
+            <img class='khan__book-container' alt='Книга' src="./images/khan-book.jpg">
             <p class='khan__buy-link'></p>
           </div>
         </div>
