--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
           <p class='khan__quote-author'>Джордж Лукас</p>
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class='khan__book-container'>
-            <img class='khan__book-container' alt='Книга' src="./images/khan-book.jpg">
-            <p class='khan__buy-link'></p>
+            <img class='khan__book-pic' alt='Книга' src="./images/khan-book.jpg">
+            <a class='khan__buy-link' href="#">Купить книгу &rarr;</a>
           </div>
         </div>
       </section>
