--- a/index.html
+++ b/index.html
@@ -192,10 +192,10 @@
         <h2 class='section-title'>Полезные ресурсы</h2>
         <p class='section-subtitle'>Больше материалов о техниках и лайфхаках обучения</p>
         <ul class='resources__logo-zone'>
-          <li><a class='links' href="#"><img class='resources__logo' alt='Полезные материалы' target="_blank" src="./images/logo/resources-arzamas.svg"></a></li>
-          <li><a class='links' href='#'><img class='resources__logo' alt='Полезные материалы' target="_blank" src="./images/logo/resources-n1.svg"></a></li>
-          <li><a class='links' href='#'><img class='resources__logo' alt='Полезные материалы' target="_blank" src="./images/logo/resources-strelka.svg"></a></li>
-          <li><a class='links' href='#'><img class='resources__logo' alt='Полезные материалы' target="_blank" src="./images/logo/resources-polka.svg"></a></li>
+          <li><a class='links' href="#"><img class='resources__logo' alt='Полезные материалы' src="./images/logo/resources-arzamas.svg"></a></li>
+          <li><a class='links' href='#'><img class='resources__logo' alt='Полезные материалы' src="./images/logo/resources-n1.svg"></a></li>
+          <li><a class='links' href='#'><img class='resources__logo' alt='Полезные материалы' src="./images/logo/resources-strelka.svg"></a></li>
+          <li><a class='links' href='#'><img class='resources__logo' alt='Полезные материалы' src="./images/logo/resources-polka.svg"></a></li>
         </ul>
       </section>
 
@@ -217,9 +217,9 @@
         <div class="footer__column footer__column_content_social">
           <h3 class='footer__column-heading'>Соцсети</h3>
           <ul class='footer__column-links'>
-            <li><a class='footer__column-link links' href='#'><img class="footer__social-icon" alt='Социальная сеть Facebook' target="_blank" src="./images/facebook_color_white.svg">Facebook</a></li>
-            <li><a class='footer__column-link links' href='#'><img class="footer__social-icon" alt='Социальная сеть Вконтакте' target="_blank" src="./images/vk_color_white.svg">Вконтакте</a></li>
-            <li><a class='footer__column-link links' href='#'><img class="footer__social-icon" alt='Социальная сеть Instagram' target="_blank" src="./images/instagram_color_white.svg">Instagram</a></li>
+            <li><a class='footer__column-link links' href='#'><img class="footer__social-icon" alt='Социальная сеть Facebook' src="./images/facebook_color_white.svg">Facebook</a></li>
+            <li><a class='footer__column-link links' href='#'><img class="footer__social-icon" alt='Социальная сеть Вконтакте' src="./images/vk_color_white.svg">Вконтакте</a></li>
+            <li><a class='footer__column-link links' href='#'><img class="footer__social-icon" alt='Социальная сеть Instagram' src="./images/instagram_color_white.svg">Instagram</a></li>
           </ul>
         </div>
       </div>
